@@ -1,6 +1,7 @@
 Revision history for idi
 
 {{$NEXT}}
+    - Improve documentation.
 
 0.0301    2022-01-03 19:01:20 PST
     - Fix w() documentation.
